--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Conduit</title>
+    <title>My Mind</title>
     <!-- Import Ionicon icons & Google Fonts our Bootstrap theme relies on -->
     <link
       href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
@@ -26,7 +26,8 @@
       type="text/css"
     />
     <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
-    <link rel="stylesheet" href="//demo.productionready.io/main.css" />
+    <!-- <link rel="stylesheet" href="//demo.productionready.io/main.css" /> -->
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
